--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import 'tailwindcss';
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -12,6 +11,12 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+@font-face {
+  font-family: 'MyCustomFont';
+  src: url('./assets/fonts/Calibri.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
 a {
@@ -25,5 +30,11 @@ a:hover {
 
 body {
   margin: 0;
-  background-color: rgb(17, 24, 39);
+  /* background-color: rgb(17, 24, 39); */
+  background-color: #58419c;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+}
+body {
+  font-family: 'Poppins', sans-serif;
 }
